[package]
name = "emerald-city"
version = "0.1.0"


[lib]
crate-type = ["staticlib"]


[dependencies]
rand = "0.6"
ring = "0.13.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

sha3 = "0.8.1"
num-bigint = {version = "0.2.2" , features = ["serde","rand"]}
num-integer = "0.1"
num-traits = "0.2.6"


bit-vec = "0.5"
cryptoxide = "0.1.1"
zeroize = "0.5.2"

[dependencies.secp256k1]
version = "0.12.0"
features = ["rand", "serde"]


